# iot-thingy52

snap/: snapcraft.yaml
src/: CMakeLists.txt  thingy.c
src/libmqttclient/: CMakeLists.txt
src/libmqttclient/MQTTClient-C/: CMakeLists.txt
src/libmqttclient/MQTTPacket/: CMakeLists.txt
src/libshared/: gatt-client.c
